RESOLVED FIXED27917
[WINCE] LOAD_WITH_ALTERED_SEARCH_PATH not supported on WINCE
https://bugs.webkit.org/show_bug.cgi?id=27917
Summary [WINCE] LOAD_WITH_ALTERED_SEARCH_PATH not supported on WINCE
Joe Mason
Reported 2009-07-31 22:24:23 PDT
Plugins are now loaded with LoadLibraryEx and the LOAD_WITH_ALTERED_SEARCH_PATH parameter, which isn't supported on WINCE. (Loading plugins fails with an "Invalid Parameter" error.)
Attachments
Go back to LoadLibrary on WINCE (1.58 KB, patch)
2009-07-31 22:50 PDT, Joe Mason
staikos: review+
Joe Mason
Comment 1 2009-07-31 22:50:19 PDT
Created attachment 33931 [details] Go back to LoadLibrary on WINCE
Benjamin Meyer
Comment 2 2009-08-03 09:22:39 PDT
Committed r46718
Note You need to log in before you can comment on or make changes to this bug.