2009-07-31  Joe Mason  <joe.mason@torchmobile.com>

Reviewed by George Staikos.

        WINCE port: LOAD_WITH_ALTERED_SEARCH_PATH param of
        LoadLibraryEx not supported on WINCE
        https://bugs.webkit.org/show_bug.cgi?id=27917

        * plugins/win/PluginPackageWin.cpp:
        (WebCore::PluginPackage::load):use LoadLibrary instead of LoadLibraryEx

Canonical link: https://commits.webkit.org/38324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46718 268f45cc-cd09-0410-ab3c-d52691b4dbfc